--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </form>
         </article>
         <aside>
-        <img src="/components/images/—Pngtree—cute cartoon meditation_6223223.png" alt="meditação">
+        <img src="components/images/—Pngtree—cute cartoon meditation_6223223.png" alt="meditação">
         </aside>
     </main>
 <body>
